integration_tests/codegen_fail/fail/object/derive_wrong_item.stderr
error: GraphQL object can only be derived for structs
 --> $DIR/derive_wrong_item.rs:4:1
  |
4 | enum Character {}
  | ^^^^^^^^^^^^^^^^^
